# lunaos-linux

./: CMakeLists.txt  Desktop.qml  Login.qml  Main.qml  README.md  linux_authenticator.cpp  linux_authenticator.h  main.cpp  resources.qrc  run.sh
apps/browser/: Browser.qml
apps/filemanager/: FileManagerBackend.cpp
apps/terminal/: TerminalApp.qml
apps/texteditor/: TextEditor.qml  TextEditorBackend.cpp  TextEditorBackend.h  texteditor.qrc
audio/: audio.qrc
overlay/etc/: os-release  profile
overlay/etc/init.d/: S99lunaos
overlay/usr/share/lunaos/: CMakeLists.txt  Desktop.qml  Login.qml  Main.qml  main.cpp  resources.qrc
overlay/usr/share/lunaos/apps/browser/: browser.qrc
overlay/usr/share/lunaos/apps/filemanager/: FileManager.qml  FileManagerBackend.h  filemanager.qrc
overlay/usr/share/lunaos/apps/terminal/: CMakeLists.txt  TerminalApp.qml  TerminalBackend.cpp  TerminalBackend.h  terminal.qrc
overlay/usr/share/lunaos/apps/texteditor/: TextEditor.qml
overlay/usr/share/lunaos/system/context-menu/: ContextMenu.qml
overlay/usr/share/lunaos/system/desktop/: systemactions.h
system/applications/: SystemApplications.cpp  SystemApplications.h  SystemWindow.qml  systemwindow.qrc
system/context-menu/: CMakeLists.txt  contextmenu.qrc
system/desktop/: systemactions.cpp
system/powermenu/: PowerMenu.qml  powermenu.qrc
system/viewmanager/: ViewManager.cpp  ViewManager.h
